--- a/WireworldinJava/nbproject/project.properties
+++ b/WireworldinJava/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=wireworldinjava.WireworldinJava
+main.class=Wireworld.windows.JFrameMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
